Ashita v4 Beta Changelog (01.12.2023)
----------------------------------------------------------------------------------------------------

Overall Project

  - Updated the registry information in the default configurations to better explain some settings.

Ashita.dll

  - ImGui: Fix issue with loading custom fonts after initial launch.
  - Controllers: Fix issue with controller input queueing while game window is out of focus.
  - Controllers: Fix silent crash when closing the game caused by double delete exception with controllers.

Addons.dll

  - ImGui: Fix buffer overwrite issues that could lead to crashing with ImGui text input controls.
  - ImGui: Simplify the names of the custom binds used to load fonts. (These are custom as we don't expose access to the actual ImGui context object which would in turn have access to the proper font atlas and its methods these are from.)

--- a/config/boot/example.ini
+++ b/config/boot/example.ini
@@ -364,189 +364,398 @@ behaviorflags.fpu_preserve                      = 0
 ;---------------------------------------------------------------------------------------------------
 ; ffxi.registry
 ;
-; Contains configuration settings used to override Final Fantasy XI's registry settings. These settings
-; take priority over what is actually within the system registry for the game. A value of -1 means that
-; Ashita will default to what value is already in the real registry for the given setting.
+; Contains configuration settings used to override Final Fantasy XI's registry settings.
 ;
-;   0000 - (number) Default: -1
-;       Mip Mapping
+; Ashita will make use of these values first before falling back to using the actual system registry
+; settings for the game client. Setting any of these configurations to -1 will result in using the
+; actual system registry value (if available).
 ;
-;       0 = Off, 1 = On; Lowest Quality, 6 = On; Best Quality
+; Every value below is considered to use -1 as its default to fall back to using the system registry.
 ;
-;   0001 - (number) Default: -1
-;       Window Width
+;---------------------------------------------------------------------------------------------------
+; 0000 - (number) Default: -1
 ;
-;   0002 - (number) Default: -1
-;       Window Height
+; Mip Mapping Level (Draw Distance)
 ;
-;   0003 - (number) Default: -1
-;       Background Width
+;       0 = Off
+;       1 = On
+;       6 = Best Quality [Recommended]
 ;
-;       Best if divisible by 2. (4096 recommended.)
+;       This value enhances the level of detail of the the world and vegetation the further you
+;       are from it. 1 enables the feature but at its lowest level of detail. 6 is the highest,
+;       and recommended, value before you will see issues with the client.
 ;
-;   0004 - (number) Default: -1
-;       Background Height
+;       This setting can cause issues when using HQ DAT mods such as:
+;       slow downs, black screens, textures not loading, or crashes.
+;---------------------------------------------------------------------------------------------------
+; 0001 - (number) Default: -1
+; 0002 - (number) Default: -1
 ;
-;       Best if divisible by 2. (4096 recommended.)
+; Window Resolution (Resolution)
 ;
-;   0005 - (number) Default: -1
-;   0006 - (number) Default: -1
-;       Unknown / Unused
+;       0001 = Width
+;       0002 = Height
 ;
-;   0007 - (number) Default: -1
-;       Sound Enabled
+;       Sets the main game client window resolution.
+;---------------------------------------------------------------------------------------------------
+; 0003 - (number) Default: -1
+; 0004 - (number) Default: -1
 ;
-;       0 = Disabled, 1 = Enabled
+; Background Resolution (Drawing Precision)
 ;
-;   0008 - (number) Default: -1
-;   0009 - (number) Default: -1
-;   0010 - (number) Default: -1
-;       Unknown / Unused
+;       0003 = Width
+;       0004 = Height
 ;
-;   0011 - (number) Default: -1
-;       Environment Animations
+;       It is best to keep the background width and height square and divisible by 2 for 
+;       best performance results. (ie. 4096x4096, 2048x2048, 1024x1024, 512x512, etc.)
 ;
-;        0 = Off, 1 = Normal, 2 = Smooth
+;       4096x4096 is recommended for best looking game visuals.
+;---------------------------------------------------------------------------------------------------
+; 0005 - (number) Default: -1
+; 0006 - (number) Default: -1
 ;
-;   0012 - (number) Default: -1
-;   0013 - (number) Default: -1
-;   0014 - (number) Default: -1
-;   0015 - (number) Default: -1
-;   0016 - (number) Default: -1
-;       Unknown / Unused
+; Unknown / Unused
+;---------------------------------------------------------------------------------------------------
+; 0007 - (number) Default: -1
 ;
-;   0017 - (number) Default: -1
-;       Bump Mapping
+; Game Sound (Enable Sound)
 ;
-;       0 = Off, 1 = On
+;       0 = Off
+;       1 = On [Recommended]
+;---------------------------------------------------------------------------------------------------
+; 0008 - (number) Default: -1
+; 0009 - (number) Default: -1
+; 0010 - (number) Default: -1
 ;
-;   0018 - (number) Default: -1
-;       Texture Compression
+; Unknown / Unused
+;---------------------------------------------------------------------------------------------------
+; 0011 - (number) Default: -1
 ;
-;       0 = High, 1 = Low, 2 = Uncompressed
+; Environment Animations (Vegetation Movement)
 ;
-;   0019 - (number) Default: -1
-;       Map Compression
+;       0 = Off
+;       1 = Normal
+;       2 = Smooth [Recommended]
+;---------------------------------------------------------------------------------------------------
+; 0012 - (number) Default: -1
+; 0013 - (number) Default: -1
+; 0014 - (number) Default: -1
+; 0015 - (number) Default: -1
+; 0016 - (number) Default: -1
 ;
-;       0 = Compressed, 1 = Uncompressed
+; Unknown / Unnused
+;---------------------------------------------------------------------------------------------------
+; 0017 - (number) Default: -1
 ;
-;   0020 - (number) Default: -1
-;       Unknown / Unused
+; Bump Mapping (Enhanced Shading)
 ;
-;   0021 - (number) Default: -1
-;       Hardware Mouse
+;       0 = Off
+;       1 = On [Recommended]
+;---------------------------------------------------------------------------------------------------
+; 0018 - (number) Default: -1
 ;
-;       0 = Off, 1 = On
+; Texture Compression (Quality > Textures)
 ;
-;   0022 - (number) Default: -1
-;       Show Opening Movie
+;       0 = High
+;       1 = Low
+;       2 = Uncompressed [Recommended]
+;---------------------------------------------------------------------------------------------------
+; 0019 - (number) Default: -1
 ;
-;       0 = Off, 1 = On
+; Map Compression (Quality > 2-D Mapping)
 ;
-;   0023 - (number) Default: -1
-;       Simplified Character Creation Visuals
+;       0 = Compressed
+;       1 = Uncompressed [Recommended]
+;---------------------------------------------------------------------------------------------------
+; 0020 - (number) Default: -1
 ;
-;       0 = Off, 1 = On
+; Animation Frame Rate
 ;
-;   0024 - (number) Default: -1
-;   0025 - (number) Default: -1
-;   0026 - (number) Default: -1
-;   0027 - (number) Default: -1
-;       Unknown / Unused
+;       0 = Full
+;       1 = Low
+;       2 = Lower
+;       3 = Lowest
 ;
-;   0028 - (number) Default: -1
-;       Gamma Base
+;       This value is generally ignored (overwritten) by the per-character in-game settings file
+;       value stored in your characters USER folder. The only time this value will be used is if
+;       the client does not find and load a value previously set.
+;---------------------------------------------------------------------------------------------------
+; 0021 - (number) Default: -1
 ;
-;       Float based value, 0 is the default.
+; Hardware Mouse
 ;
-;   0029 - (number) Default: -1
-;       Maximum Number Of Sounds
+;       0 = Off
+;       1 = On [Recommended]
+;---------------------------------------------------------------------------------------------------
+; 0022 - (number) Default: -1
 ;
-;       12 = Lowest, 20 = Highest
+; Play Opening Movie On Startup
 ;
-;   0030 - (number) Default: -1
-;       Enable 3D LCD Mode
+;       0 = Off [Recommended]
+;       1 = On
+;---------------------------------------------------------------------------------------------------
+; 0023 - (number) Default: -1
 ;
-;       0 = Disabled, 1 = Enabled
+; Simplified Character Creation Visuals (Legacy Settings > Simplify Character Selection Screen Graphics)
 ;
-;   0031 - (number) Default: -1
-;   0032 - (number) Default: -1
-;   0033 - (number) Default: -1
-;       Unknown / Unused
+;       0 = Off [Recommended]
+;       1 = On
+;---------------------------------------------------------------------------------------------------
+; 0024 - (number) Default: -1
+; 0025 - (number) Default: -1
+; 0026 - (number) Default: -1
+; 0027 - (number) Default: -1
 ;
-;   0034 - (number) Default: -1
-;       Window Mode
+; Unknown / Unused
+;---------------------------------------------------------------------------------------------------
+; 0028 - (number) Default: -1
 ;
-;       0 = Fullscreen, 1 = Windowed, 3 = Borderless Windowed
-;       2 = Fullscreen Windowed (Undocumented.)
+; Gamma Base (Brightness)
 ;
-;       Note: There is a bug in the official client handling of this setting where 'Borderless Windowed' is
-;       actually 'Fullscreen Windowed', and 'Fullscreen Windowed' is actually 'Borderless Windowed'.
+;       3212836864 = Dark (-1)
+;                0 = Default
+;       1065353216 = Bright (1)
 ;
-;   0035 - (number) Default: -1
-;       Sound Always On (Play In Background)
+;       This value is treated as a float scaling -1 (dark) to 1 (bright) with 0 being the default.
+;---------------------------------------------------------------------------------------------------
+; 0029 - (number) Default: -1
 ;
-;       0 = Off, 1 = On
+; Number of Simultaneous Sound Effects
 ;
-;   0036 - (number) Default: -1
-;       Font Compression
+;       12 = Lowest
+;       20 = Highest [Recommended]
+;---------------------------------------------------------------------------------------------------
+; 0030 - (number) Default: -1
 ;
-;       0 = Compressed, 1 = Uncompressed, 2 = High Quality
+; 3D LCD Screen Mode
 ;
-;   0037 - (number) Default: -1
-;       Menu Width
+;       0 = Off [Recommended]
+;       1 = On
 ;
-;       Recommended to match Window Width.
+;       When this is enabled, the Background Resolution setting is used for the sizing of the
+;       individual screens. This feature was never officially launched and is more or less a
+;       demo. Due to how parts of the game are rendered it is not ideal to play in this mode.
+;---------------------------------------------------------------------------------------------------
+; 0031 - (number) Default: -1
+; 0032 - (number) Default: -1
+; 0033 - (number) Default: -1
 ;
-;   0038 - (number) Default: -1
-;       Menu Height
+; Unknown / Unused
+;---------------------------------------------------------------------------------------------------
+; 0034 - (number) Default: -1
 ;
-;       Recommended to match Window Height.
+; Window Mode
 ;
-;   0039 - (number) Default: -1
-;       IME Mode
+;       0 = Fullscreen
+;           When this mode is enabled, the graphics device is created in 'exclusive' mode.
+;           This means that if you try and ALT+Tab, the game will crash due to it not properly
+;           handling device resets properly.
+;       1 = Windowed
+;       2 = Windowed (Borderless)
+;           Please note, this mode is technically undocumented but still works. You should use this
+;           mode with caution in the event it causes issues. (You can create this similar effect using
+;           the Ashita 'move' addon to toggle the window border off.)
+;       3 = Fullscreen (Windowed)
+;---------------------------------------------------------------------------------------------------
+; 0035 - (number) Default: -1
 ;
-;       0 = v1, 1 = v2
+; Play Sounds In Background
 ;
-;   0040 - (number) Default: -1
-;       Graphics Stabilization
+;       0 = Off
+;       1 = On [Recommended]
+;---------------------------------------------------------------------------------------------------
+; 0036 - (number) Default: -1
 ;
-;       0 = Off, 1 = On
+; Font Compression (Quality > Fonts)
 ;
-;   0041 - (number) Default: -1
-;       Enable Beta UI
+;       0 = Compressed
+;       1 = Uncompressed
+;       2 = High Quality [Recommended]
+;---------------------------------------------------------------------------------------------------
+; 0037 - (number) Default: -1
+; 0038 - (number) Default: -1
 ;
-;       0 = Disabled, 1 = Enabled
-;       (Not in the retail client.)
+; Menu Resolution (UI Size)
 ;
-;   0042 - (string) Default: -1
-;       Default Game Screenshot Path
+;       0037 = Width
+;       0038 = Height
 ;
-;   0043 - (number) Default: -1
-;       Take Screenshot In Screen Resolution
+;       These settings are used to scale the game menu resolution. It is recommended to use the
+;       same resolution as your Window Resolution settings generally. Scaling is generally only
+;       needed if you are playing on a larger screen size (or a TV) such as 4K where the default
+;       menu size is harder to see.
 ;
-;       0 = Off, 1 = On
+;       The games included configuration editor scales this resolution by 5% increments based on
+;       your Window Resolution settings. For example, while using the window resolution 1920x1080,
+;       the following would be the generated 'Small' and 'Large' values:
 ;
-;   0044 - (number) Default: -1
-;       Maintain Window Aspect Ratio
+;           0 x 0       = Matched Window Resolution
+;           1824 x 1026 = Small
+;           960 x 540   = Large
+;---------------------------------------------------------------------------------------------------
+; 0039 - (number) Default: -1
 ;
-;       0 = Off, 1 = On
+; IME Mode
 ;
-;   0045 - (number) Default: -1
-;       Unknown / Unused
+;       0 = v1
+;       1 = v2
+;---------------------------------------------------------------------------------------------------
+; 0040 - (number) Default: -1
 ;
-;   padmode000 - (array)
-;       Array of 6 booleans that control gamepad settings. Settings are in the following order:
+; Graphics Stabilization (Legacy > Optimize for certain graphics cards)
 ;
-;       - Enable Gamepad        [0 = Disabled, 1 = Enabled]
-;       - Enable Force Feedback [0 = Disabled, 1 = Enabled]
-;       - Enable Slider         [0 = Disabled, 1 = Enabled]
-;       - Enable Hat Switches   [0 = Disabled, 1 = Enabled]
-;       - Enable When Inactive  [0 = Disabled, 1 = Enabled]
-;       - Enable XInput         [0 = Disabled, 1 = Enabled]
+;       0 = Off [Recommended]
+;       1 = On
+;---------------------------------------------------------------------------------------------------
+; 0041 - (number) Default: -1
 ;
-;   padsin000 - (array)
-;       Array of button mappings to game functions.
+; Enable Beta UI
+;
+;       0 = Off [Recommended]
+;       1 = On
+;
+;       This feature is not available in the retail client.
+;---------------------------------------------------------------------------------------------------
+; 0042 - (string) Default: -1
+;
+; Settings and Screenshots Path
+;
+;       Note: Ashita does not make use of this value while using the Screenshots plugin.
+;---------------------------------------------------------------------------------------------------
+; 0043 - (number) Default: -1
+;
+; Take Screenshot In Screen Resolution
+;
+;       0 = Off
+;       1 = On
+;
+;       Note: Ashita does not make use of this value while using the Screenshots plugin.
+;---------------------------------------------------------------------------------------------------
+; 0044 - (number) Default: -1
+;
+; Maintain Aspect Ratio
+;
+;       0 = Off
+;       1 = On
+;---------------------------------------------------------------------------------------------------
+; 0045 - (number) Default: -1
+;
+; Unknown / Unused
+;---------------------------------------------------------------------------------------------------
+; padmode000 - (array) Default: -1
+;
+; Gamepad Settings
+;
+;       This value is a comma-separated array of 6 boolean values. The values are as follows:
+;
+;       - Enable Gamepad
+;       - Enable Force Feedback
+;       - Enable Slider
+;       - Enable Hat Switches
+;       - Enable When Inactive
+;       - Enable XInput
+;
+;       An example of using this value is as follows:
+;       1,1,1,1,1,1
+;---------------------------------------------------------------------------------------------------
+; padsin000 - (array) Default: -1
+;
+; Gamepad Action Bindings
+;
+;       This value is a comma-separated array of button ids that map to an in-game action based
+;       on the index within the array. The ids of the buttons used is dependent on if you have
+;       the 'Enable XInput' setting on or not in 'padmode000'.
+;
+;       The 27 indexes within this array are mapped to the following in-game actions:
+;
+;            0 = Toggle auto-run.
+;            1 = Toggle macro bar display. (CTRL)
+;            2 = Toggle first/third person camera mode.
+;            3 = Toggle macro bar display. (ALT)
+;            4 = Toggle /heal and lock-on target.
+;            5 = Cancel.
+;            6 = Toggle main menu.
+;            7 = Select or confirm current selection.
+;            8 = Select active window.
+;            9 = Toggle UI visibility.
+;           10 = Menu navigation with movement thumbstick while held.
+;           11 = Move camera with movement thumbstick while held.
+;           12 = Toggle logout window.
+;           13 = Player Movement (Up)
+;           14 = Player Movement (Down)
+;           15 = Player Movement (Left)
+;           16 = Player Movement (Right)
+;           17 = Camera Movement (Up)
+;           18 = Camera Movement (Down)
+;           19 = Camera Movement (Left)
+;           20 = Camera Movement (Right)
+;           21 = Menu movement. (Up)
+;           22 = Menu movement. (Down)
+;           23 = Menu movement. (Lef)
+;           24 = Menu movement. (Right)
+;           25 = Take screenshot. (UI must be hidden.)
+;           26 = Toggle use of movement, menu, camera controls.
+;
+;       The button id map for DirectInput controllers is:
+;
+;           -1 = NONE
+;            0 = SQUARE
+;            1 = CROSS (X)
+;            2 = CIRCLE
+;            3 = TRIANGLE
+;            4 = L1
+;            5 = R1
+;            6 = L2
+;            7 = R2
+;            8 = SELECT [PS5: Share]
+;            9 = START [PS5: Option]
+;           10 = L3
+;           11 = R3
+;           12 = ??? [PS5: PS Button]
+;           13 = ??? [PS5: Touchpad Button]
+;           14 = ??? [PS5: Mute/Mic Button]
+;           32 = Left Stick Left/Right
+;           33 = Left Stick Up/Down
+;           34 = Right Stick Left/Right
+;           37 = Right Stick Up/Down
+;           40 = DPad Left/Right
+;           41 = DPad Up/Down
+;
+;           Note: Some of these values can be used as negatives to invert their usage.
+;
+;       The button id map for XInput controllers is:
+;
+;           -1 = NONE
+;            0 = B
+;            1 = X
+;            2 = Y
+;            3 = A
+;            4 = RIGHT
+;            5 = LEFT
+;            6 = UP
+;            7 = DOWN
+;            8 = LB
+;            9 = LT
+;           10 = L STICK BUTTON
+;           11 = RB
+;           12 = RT
+;           13 = R STICK BUTTON
+;           14 = START
+;           15 = BACK
+;           16 = NONE (Blank, -1 is also used for this.)
+;          -32 = Left Stick Left/Right
+;           32 = Left Stick Left/Right
+;          -33 = Left Stick Up/Down
+;           33 = Left Stick Up/Down 
+;          -35 = Right Stick Left/Right
+;           35 = Right Stick Left/Right
+;          -35 = Right Stick Up/Down
+;           35 = Right Stick Up/Down
+;
+;       For example, this would bind the controllers auto-run to START on both controller types:
+;
+;           DInput: 9,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1
+;           XInput: 14,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1
 ;---------------------------------------------------------------------------------------------------
 [ffxi.registry]
 0000 = 6
