Ashita v4 Beta Changelog (12.01.2023) [Ashita v4.1.0.2] ----------------------------------------------------------------------------------------------------
Overall Project

  - General code cleanup.
  - Project(s) have been ported to latest version of Visual Studio 2022.

SDK

  - sdk: Updated the SDK interface version. (4.16)
  - sdk: Input - Updated getdevicedatacallback_f to include the DirectInput device pointer as the first parameter.
  - sdk: Input - Updated getdevicestatecallback_f to include the DirectInput device pointer as the first parameter.
  - sdk: Input - Updated getdevicedatacallback_f to reorder its parameters to move custom added parameters to the end of the call.
  - sdk: (castbar) - Updated most Unknowns to their true names.
  - sdk: (entity) Renamed position Unknowns to 'W' where applicable.
  - sdk: (entity) Renamed position_t::Unknown0000 to 'W'.
  - sdk: (entity) Renamed move_t::Unknown0000 to 'W'.
  - sdk: (entity) Renamed move_t::Unknown0001 to 'DeltaW'.
  - sdk: (entity) Renamed Unknown0000 to 'Next'.
  - sdk: (entity) Realigned Unknown entries names.
  - sdk: (inventory) Updated treasureitem_t structure fields.
  - sdk: (inventory) treasureitem_t - Renamed Flags to Use. (Proper name.)
  - sdk: (inventory) treasureitem_t - Renamed Unknown0000 to Flags, Price, and Extra.
  - sdk: (inventory) inventory_t - Renamed part of Unknown0000 to iLookItem and pItem.
  - sdk: (inventory) inventory_t - Updated comment for Unknown0000 to mention its true purpose.
  - sdk: (inventory) inventory_t - Renamed Unknown0002 to CheckBallistaChevronCount.
  - sdk: (inventory) inventory_t - Renamed Unknown0003 to CheckBallistaChevronFlags.
  - sdk: (inventory) inventory_t - Renamed Unknown0004 to CheckBallistaFlags.
  - sdk: (inventory) inventory_t - Renamed Unknown0005 to UserMessageCount.
  - sdk: (player) abilityrecast_t - Renamed Unknown0000 to RecastCalc1.
  - sdk: (player) abilityrecast_t - Renamed Unknown0001 to RecastCalc2.
  - sdk: (player) abilityrecas

--- a/config/boot/example.ini
+++ b/config/boot/example.ini
@@ -757,6 +757,12 @@ behaviorflags.fpu_preserve                      = 0
 ;           DInput: 9,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1
 ;           XInput: 14,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1
 ;---------------------------------------------------------------------------------------------------
+; padguid000 - (string) Default: -1
+;
+; Gamepad GUID Binding
+;
+;       This value controls binding to a specific controller device by its GUID.
+;---------------------------------------------------------------------------------------------------
 [ffxi.registry]
 0000 = 6
 0001 = 1920
@@ -778,16 +784,16 @@ behaviorflags.fpu_preserve                      = 0
 0017 = 0
 0018 = 2
 0019 = 1
-0020 = 1
+0020 = 0
 0021 = 1
 0022 = 0
 0023 = 0
-0024 = 0
+0024 = -1
 0025 = -1
 0026 = -1
 0027 = -1
 0028 = 0
-0029 = 12
+0029 = 20
 0030 = 0
 0031 = 1002740646
 0032 = 0
@@ -799,10 +805,11 @@ behaviorflags.fpu_preserve                      = 0
 0038 = 1080
 0039 = 1
 0040 = 0
-0041 = 1
+0041 = 0
 0042 = C:\Program Files (x86)\SquareEnix\FINAL FANTASY XI
 0043 = 1
 0044 = 1
 0045 = 0
 padmode000 = 1,1,1,1,1,0
 padsin000 = 4,6,11,7,10,1,0,2,3,8,-1,-1,9,33,33,32,32,37,37,34,34,41,41,40,40,5,-1
+padguid000 = -1
