--- a/config/boot/example-retail.ini
+++ b/config/boot/example-retail.ini
@@ -138,6 +138,6 @@ behaviorflags.fpu_preserve                      = 0
 0043 = 1
 0044 = 1
 0045 = 0
-padmode000 = 1,1,1,1,1,0
-padsin000 = 4,6,11,7,10,1,0,2,3,8,-1,-1,9,33,33,32,32,37,37,34,34,41,41,40,40,5,-1
+padmode000 = -1
+padsin000 = -1
 padguid000 = -1
