sandbox: Update default configurations.

--- a/config/sandbox/sandbox.ini
+++ b/config/sandbox/sandbox.ini
@@ -34,7 +34,13 @@
 ;       32bit: HKEY_LOCAL_MACHINE\SOFTWARE\PlayOnlineUS\SquareEnix\PlayOnlineViewer
 ;       64bit: HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\PlayOnlineUS\SquareEnix\PlayOnlineViewer
 ;
+; > use_force_valid_clsid_bypass - (bool) Default: 0
+;
+;   Hooks the games product lookup validation when attempting to 'Check Files' or play titles that
+;   may otherwise fail to show as installed. (As long as a valid path is defined for a product, it
+;   should now always show when this option is enabled.)
 ;---------------------------------------------------------------------------------------------------
 [sandbox.hooks]
 use_interface_bypass = 1
 use_playonline_encryption_override = 1
+use_force_valid_clsid_bypass = 0
