vscode: Added new global object 'AddonManager' to settings.json.

--- a/addons/.vscode/settings.json
+++ b/addons/.vscode/settings.json
@@ -107,6 +107,7 @@
         "ITarget",
         "IXInput",
         // Global Objects (Ashita)
+        "AddonManager",
         "AshitaCore",
         "LogManager",
         // Global Objects (ImGui)
