Add padexsin000 to the example configurations.

--- a/config/boot/example.ini
+++ b/config/boot/example.ini
@@ -149,6 +149,7 @@ behaviorflags.fpu_preserve                      = 0
 0043 = 1
 0044 = 1
 0045 = 0
+padexsin000 = -1
+padguid000 = -1
 padmode000 = -1
 padsin000 = -1
-padguid000 = -1
