addons: Updated bundled .vscode/settings.json file.   - Reordered the file properties alphabetically.   - Disabled diagnostics on ignored files.   - Added diagnostics workspace event for OnSave.   - Disabled hinting by default.   - Added ignored workspace files and folders.   - Added increased workspace size limits.

--- a/addons/.vscode/settings.json
+++ b/addons/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
+    "lua.debug.settings.luaVersion": "luajit",
     "Lua.diagnostics.disable": [
         "lowercase-global",
         "undefined-field"
     ],
+    "Lua.diagnostics.enable": true,
     "Lua.diagnostics.globals": [
         // Enumerations (Ashita)
         "ChatInputOpenStatus",
@@ -168,7 +170,20 @@
         "GetEntity",
         "GetPlayerEntity",
     ],
-    "Lua.runtime.version": "LuaJIT",
+    "Lua.diagnostics.ignoredFiles": "Disable",
     "Lua.diagnostics.workspaceDelay": -1,
-    "lua.debug.settings.luaVersion": "luajit"
+    "Lua.diagnostics.workspaceEvent": "OnSave",
+    "Lua.hint.enable": false,
+    "Lua.hint.setType": false,
+    "Lua.runtime.version": "LuaJIT",
+    "Lua.workspace.ignoreDir": [
+        ".vscode",
+        "libs/socket",
+        "libs/json.lua",
+        "libs/mime.lua",
+        "libs/reflect.lua",
+        "libs/socket.lua",
+    ],
+    "Lua.workspace.maxPreload": 100000,
+    "Lua.workspace.preloadFileSize": 100000
 }
